--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Video Call</title>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             video {
@@ -19,7 +20,8 @@
             <video src="" id="localVideo" autoplay playsinline controls="off"></video>
             <!--<video src="" id="remoteVideo" autoplay playsinline controls="off"></video>-->
         </div>
-        <button onclick="makeCall();">Start</button>
+        <button onclick="makeCall();">Start</button><br>
+        <button onclick="logPeerConnections();">Log Peer Connections</button>
     </body>
 </html>
 
