Implement video connection

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
         <h1>Simple Video Call</h1>
 
         <div>
-            <video src="" id="localVideo" autoplay playsinline controls="off"></video>
+            <video id="localVideo" autoplay playsinline muted></video>
             <!--<video src="" id="remoteVideo" autoplay playsinline controls="off"></video>-->
         </div>
         <button onclick="makeCall();">Start</button><br>
@@ -25,6 +25,6 @@
     </body>
 </html>
 
-<!--<script src="/socket.io/socket.io.js"></script>
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
+<!--<script src="/socket.io/socket.io.js"></script>-->
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="main.js"></script>
