Show both local and remote video streams

--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 
         <div>
             <video id="localVideo" autoplay playsinline muted></video>
-            <!--<video src="" id="remoteVideo" autoplay playsinline controls="off"></video>-->
+            <video id="remoteVideo" autoplay playsinline muted></video>
         </div>
         <button onclick="makeCall();">Start</button><br>
         <button onclick="logPeerConnections();">Log Peer Connections</button>
