--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
             <video id="remoteVideo" autoplay playsinline muted></video>
         </div>
         <button onclick="makeCall();">Start</button><br>
-        <button onclick="logPeerConnections();">Log Peer Connections</button>
+        <button onclick="switchStream();">Switch</button>
     </body>
 </html>
 
