--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
           </style>
     </head>
     
-    <body style="text-align: center;" onload="afterLoad();">
+    <body style="text-align: center;">
         <h1>Simple Video Call</h1>
 
         <div>
