Add video button id

--- a/video.htm
+++ b/video.htm
@@ -8,7 +8,7 @@
     </head>
 
     <body style="text-align: center;">
-        <div><button>Start instant video call</button></div>
+        <div><button id="startcall">Start instant video call</button></div>
     </body>
 
 </html>
