--- a/video.htm
+++ b/video.htm
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
-    <body style="text-align: center;">
-        <div><button id="startcall">Start instant video call</button></div>
+    <body style="text-align: center; background: linear-gradient(90deg, #1de5e2, #b588f7);">
+        <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);"><div style="background-color: white;  border-radius: 50%; padding: 25%;"><button id="startcall" style="background-color: white; border: none; cursor: pointer;"><b>Start instant video call</b></button></div></div>
     </body>
 
 </html>
