--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
           </style>
     </head>
     
-    <body style="text-align: center;" onload="getLink();">
+    <body style="text-align: center; background: linear-gradient(90deg, #1de5e2, #b588f7);" onload="getLink();">
         <h1>Simple Video Call</h1>
 
         <div>
@@ -21,13 +21,13 @@
         </div>
 
         <div>
-            <button onclick="makeCall();">Start</button><br>
+            <button onclick="makeCall();">Start</button>
             <button onclick="switchStream();">Switch</button>
         </div>
 
         <div style="margin: 1%;">
             <div>Call link: </div>
-            <div id="linkdiv" style="display: inline; border: solid 1px black;" ></div>
+            <div id="linkdiv" style="display: inline; border: solid 1px black; border-radius: 3px; background-color: white;" ></div>
             <button style="display: inline;" onclick="copyLink();">Copy</button>
         </div>
 
