Set video element height

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
         <h1>Simple Video Call</h1>
 
         <div>
-            <video id="localVideo" style="max-width: 100%;" autoplay playsinline muted></video>
+            <video id="localVideo" style="height: 62.5% !important;" autoplay playsinline muted></video>
         </div>
 
         <div>
