Set video height to 100%

--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,8 @@
     <body style="text-align: center; background: linear-gradient(90deg, #1de5e2, #b588f7);" onload="getLink();">
         <h1>Simple Video Call</h1>
 
-        <div>
-            <video id="localVideo" style="max-width: 100%;" width="360" autoplay playsinline muted></video>
+        <div style="height: 100%;">
+            <video id="localVideo" style="max-width: 100%; min-height: 100%;" width="360" autoplay playsinline muted></video>
         </div>
 
         <div>
