Style background, texts and buttons

--- a/video.htm
+++ b/video.htm
@@ -13,7 +13,7 @@
         </style>
     </head>
 
-    <body style="text-align: center; background: linear-gradient(90deg, #1de5e2, #b588f7);">
+    <body style="text-align: center; background: #2C1B47;">
         <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);"><button class="instantCallBtn" id="startcall" style="background-color: white;  border-radius: 50%; padding: 25%;"><b>Start instant video call</b></button></div>
     </body>
 
