--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
         <title>Video Call</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <style>
             video {
                 -webkit-transform: scaleX(-1);
@@ -15,22 +16,22 @@
           </style>
     </head>
     
-    <body style="text-align: center; background: linear-gradient(90deg, #1de5e2, #b588f7);" onload="getLink();">
-        <h1>Simple Video Call</h1>
+    <body style="text-align: center; background: #2C1B47;" onload="getLink();">
+        <h1 style="color: white;">Gugul Meat</h1>
 
         <div>
             <video id="localVideo" style="max-width: 100%;" width="360" autoplay playsinline muted></video>
         </div>
 
         <div>
-            <button onclick="makeCall();">Start</button>
-            <button onclick="switchStream();">Switch</button>
+            <button class="btn btn-light m-1" onclick="makeCall();">Start</button>
+            <button class="btn btn-light m-1" onclick="switchStream();">Switch</button>
         </div>
 
         <div style="margin: 1%;">
-            <div>Call link: </div>
-            <div id="linkdiv" style="display: inline; border: solid 1px black; border-radius: 3px; background-color: white;" ></div>
-            <button style="display: inline;" onclick="copyLink();">Copy</button>
+            <div style="color: white;">Call link: </div>
+            <div class="rounded p-1" style="display: inline; border: solid 1px black; background-color: white;" ><span id="linkdiv"></span></div>
+            <button class="btn btn-light m-1" style="display: inline;" onclick="copyLink();">Copy</button>
         </div>
 
     </body>
