Add header text and padding

--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
           </style>
     </head>
     
-    <body style="text-align: center; background: #2C1B47;" onload="getLink();">
+    <body class="p-2" style="text-align: center; background: #2C1B47;" onload="getLink();">
         <h1 style="color: white;">Gugul Meat</h1>
 
         <div>
