--- a/video.htm
+++ b/video.htm
@@ -5,6 +5,7 @@
         <title>Video Call</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <style>
             .instantCallBtn:hover {
                 background-color: cornsilk !important;
@@ -13,7 +14,8 @@
         </style>
     </head>
 
-    <body style="text-align: center; background: #2C1B47;">
+    <body class="p-2" style="text-align: center; background: #2C1B47;">
+        <h1 style="color: white;">Gugul Meat</h1>
         <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);"><button class="instantCallBtn" id="startcall" style="background-color: white;  border-radius: 50%; padding: 25%;"><b>Start instant video call</b></button></div>
     </body>
 
