Make video element background black

--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
         <h1 style="color: white;">Gugul Meat</h1>
 
         <div>
-            <video id="localVideo" style="max-width: 100%;" width="360" autoplay playsinline muted></video>
+            <video id="localVideo" style="max-width: 100%; background-color: black;" width="360" autoplay playsinline muted></video>
         </div>
 
         <div>
